--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
     <body>
         <header>
             <div class="logo">
-                <img src="C:\Users\User\OneDrive - Durban University of Technology (1)\Pictures\Screenshots\Logo.png" alt="Z Snacks Logo">
+                <img src="https://github.com/MohamedSuhailKhan/Zsnacks/blob/main/Logo.png" alt="Z Snacks Logo">
             </div>
             <nav>
                 <ul>
