--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
     <body>
         <header>
             <div class="logo">
-                <img src="Logo.jpg" alt="Z Snacks Logo">
+                <img src="Logo.png" alt="Z Snacks Logo">
             </div>
             <nav>
                 <ul>
