--- a/index.html
+++ b/index.html
@@ -157,8 +157,10 @@
                 <h2>Our Products</h2>
                 <div class="product-list">
                     <div class="product">
-                        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTBwOLEFyX0335nfQi4fthybiL5XU284j303w&s" alt="Samoosas">
-                        <h3>Samoosas</h3>
+                        <a href="samoosas.html">
+                           <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTBwOLEFyX0335nfQi4fthybiL5XU284j303w&s" alt="Samoosas">
+                           <h3>Samoosas</h3>
+                        </a>
                         <p>Price: R35.00 per dozen</p>
                     </div>
                     <div class="product">
