--- a/index.html
+++ b/index.html
@@ -158,9 +158,8 @@
                 <div class="product-list">
                     <div class="product">
                         <a href="samoosas.html">
-                           <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTBwOLEFyX0335nfQi4fthybiL5XU284j303w&s" alt="Samoosas">
+                           <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTBwOLEFyX0335nfQi4fthybiL5XU284j303w&s" alt="Samoosas">><span></span></a>
                            <h3>Samoosas</h3>
-                        </a>
                         <p>Price: R35.00 per dozen</p>
                     </div>
                     <div class="product">
