--- a/samoosas.html
+++ b/samoosas.html
@@ -16,10 +16,10 @@
 
         header {
             background-color: #e06158;
-                color: #000000;
-                text-align: center;
-                padding: 20px;
-                box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+            color: #000000;
+            text-align: center;
+            padding: 20px;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
         }
 
         .logo img {
@@ -43,10 +43,15 @@
             font-size: 18px;
             font-weight: bold;
             transition: color 0.3s;
+            border: 2px solid transparent;
+            padding: 5px 10px;
         }
 
         nav ul li a:hover {
-            color: #ffcc00;
+    color: #ffcc00;
+    text-shadow: 0 0 8px #ffcc00, 0 0 15px #ffcc00, 0 0 20px #ffcc00;
+}
+
         }
 
         main {
@@ -64,6 +69,15 @@
             text-align: center;
             margin-bottom: 20px;
             font-family: 'Permanent Marker', cursive;
+            text-shadow: 
+                -2px -2px 0 black, 
+                2px -2px 0 black, 
+                -2px 2px 0 black, 
+                2px 2px 0 black, 
+                0px 2px 0 black, 
+                2px 0px 0 black, 
+                -2px 0px 0 black, 
+                0px -2px 0 black;
         }
 
         table {
@@ -93,14 +107,25 @@
         footer p {
             margin: 0;
         }
+
+        .yellow-border {
+            color: yellow;
+            text-shadow: 
+                -2px -2px 0 black, 
+                2px -2px 0 black, 
+                -2px 2px 0 black, 
+                2px 2px 0 black, 
+                0px 2px 0 black, 
+                2px 0px 0 black, 
+                -2px 0px 0 black, 
+                0px -2px 0 black;
+        }
     </style>
 </head>
 <body>
     <header>
         <div class="logo">
             <img src="Logo.png" alt="Z Snacks Logo">
-            <h1>Samoosas</h1>
-            <p>The Snack Kings</p>
         </div>
         <nav>
             <ul>
@@ -113,7 +138,7 @@
 
     <main>
         <section id="flavors">
-            <h2>Samoosas Flavors</h2>
+            <h2>Samoosa Flavors</h2>
             <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTBwOLEFyX0335nfQi4fthybiL5XU284j303w&s" alt="Samoosas">
             <table>
                 <thead>
