--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
 
             nav ul li a:hover {
                 color: #ffcc00;
+                text-shadow: 0 0 8px #ffcc00, 0 0 15px #ffcc00, 0 0 20px #ffcc00;
             }
 
             main {
