--- a/index.html
+++ b/index.html
@@ -59,10 +59,19 @@
             }
 
             h2 {
-                color: #ffcc00;
-                text-align: center;
-                margin-bottom: 20px;
-                font-family: 'Permanent Marker', cursive;
+            color: #ffcc00;
+            text-align: center;
+            margin-bottom: 20px;
+            font-family: 'Permanent Marker', cursive;
+            text-shadow: 
+                -2px -2px 0 black, 
+                2px -2px 0 black, 
+                -2px 2px 0 black, 
+                2px 2px 0 black, 
+                0px 2px 0 black, 
+                2px 0px 0 black, 
+                -2px 0px 0 black, 
+                0px -2px 0 black;
             }
 
             .product-list {
@@ -132,6 +141,18 @@
             footer p {
                 margin: 0;
             }
+            .yellow-border {
+            color: yellow;
+            text-shadow: 
+                -2px -2px 0 black, 
+                2px -2px 0 black, 
+                -2px 2px 0 black, 
+                2px 2px 0 black, 
+                0px 2px 0 black, 
+                2px 0px 0 black, 
+                -2px 0px 0 black, 
+                0px -2px 0 black;
+        }
         </style>
     </head>
     <body>
@@ -159,7 +180,7 @@
                 <div class="product-list">
                     <div class="product">
                         <a href="samoosas.html">
-                           <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTBwOLEFyX0335nfQi4fthybiL5XU284j303w&s" alt="Samoosas">><span></span></a>
+                           <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTBwOLEFyX0335nfQi4fthybiL5XU284j303w&s" alt="Samoosas"><span></span></a>
                            <h3>Samoosas</h3>
                         <p>Price: R35.00 per dozen</p>
                     </div>
