--- a/samoosas.html
+++ b/samoosas.html
@@ -81,9 +81,10 @@
         }
 
         table {
-            width: 100%;
+            width: auto;
+            max-with: 90%;
             border-collapse: collapse;
-            margin: 20px 0;
+            margin: 20px auto;
         }
 
         th, td {
@@ -119,6 +120,13 @@
                 2px 0px 0 black, 
                 -2px 0px 0 black, 
                 0px -2px 0 black;
+        }
+
+        #flavors img {
+            display: block; 
+            margin: 0 auto; 
+            max-width: 50%; 
+            height: auto;
         }
     </style>
 </head>
