--- a/samoosas.html
+++ b/samoosas.html
@@ -48,8 +48,8 @@
         }
 
         nav ul li a:hover {
-    color: #ffcc00;
-    text-shadow: 0 0 8px #ffcc00, 0 0 15px #ffcc00, 0 0 20px #ffcc00;
+            color: #ffcc00;
+            text-shadow: 0 0 8px #ffcc00, 0 0 15px #ffcc00, 0 0 20px #ffcc00;
 }
 
         }
@@ -81,7 +81,7 @@
         }
 
         table {
-            width: auto;
+            width: 90%;
             max-with: 90%;
             border-collapse: collapse;
             margin: 20px auto;
