--- a/samoosas.html
+++ b/samoosas.html
@@ -153,32 +153,39 @@
                     <tr>
                         <th>Flavor</th>
                         <th>Description</th>
+                        <th>Price</th>
                     </tr>
                 </thead>
                 <tbody>
                     <tr>
                         <td>Mince</td>
                         <td>Classic minced meat filling, perfectly spiced.</td>
+                        <td>R40,00 a dozen</td>
                     </tr>
                     <tr>
                         <td>Chicken</td>
                         <td>Succulent chicken filling with a hint of masala.</td>
+                        <td>R40,00 a dozen</td>
                     </tr>
                     <tr>
                         <td>Sweetcorn & Cheese</td>
                         <td>Rich and creamy filling with sweetcorn and melted cheese.</td>
+                        <td>R40,00 a dozen</td>
                     </tr>
                     <tr>
                         <td>Tinfish</td>
                         <td>Flavored tinfish filling for seafood lovers.</td>
+                        <td>R40,00 a dozen</td>
                     </tr>
                     <tr>
                         <td>Soya</td>
                         <td>Delicious vegetarian option with spiced soya filling.</td>
+                        <td>R40,00 a dozen</td>
                     </tr>
                     <tr>
                         <td>Steak Mince</td>
                         <td>Premium steak mince filling with robust flavors.</td>
+                        <td>R40,00 a dozen</td>
                     </tr>
                 </tbody>
             </table>
