--- a/samoosas.html
+++ b/samoosas.html
@@ -127,6 +127,7 @@
             margin: 0 auto; 
             max-width: 50%; 
             height: auto;
+            border-redius: 10px;
         }
     </style>
 </head>
