--- a/index.html
+++ b/index.html
@@ -153,6 +153,14 @@
                 -2px 0px 0 black, 
                 0px -2px 0 black;
         }
+            .fade-out {
+  animation: fadeOut 1s ease-in-out;
+}
+
+@keyframes fadeOut {
+  from { opacity: 1; }
+  to { opacity: 0; }
+}
         </style>
     </head>
     <body>
