--- a/index.html
+++ b/index.html
@@ -93,19 +93,20 @@
             position: relative;
             overflow: hidden;
         }
-            .product::before {
+            .product::after {
                 content: '';
                 position: absolute;
                 top: 0;
-                left: 0;
+                left: 100%;
                 width: 100%;
                 height: 100%;
-                background-color: #fff; /* Or any background color you prefer */
+                background-color: rgba(255, 255, 255, 0.7);
+                backdrop-filter: blur(5px);
                 transform: translateX(0); /* Start position */
                 transition: transform 0.5s ease-in-out; /* Smooth transition */
                 z-index: 1; /* Ensure it's on top of the product content */
         }
-            .product.swipe-left::before {
+            .product.swipe-left::after {
                 transform: translateX(-100%); /* Swipe to the left */
         }
 
