--- a/index.html
+++ b/index.html
@@ -100,8 +100,8 @@
                 left: 100%;
                 width: 100%;
                 height: 100%;
-                background-color: rgba(255, 255, 255, 0.98);
-                backdrop-filter: blur(1px);
+                background-image: linear-gradient(to left, rgba(255, 255, 255, 0.9), transparent); /* Gradient */
+                backdrop-filter: none;
                 transform: translateX(0); /* Start position */
                 transition: transform 0.6s ease-in-out; /* Smooth transition */
                 z-index: 1; /* Ensure it's on top of the product content */
