--- a/index.html
+++ b/index.html
@@ -89,25 +89,13 @@
             padding: 20px;
             width: 250px;
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-            transition: transform 0.3s;
-            position: relative;
-            overflow: hidden;
+            transition: filter 0.2s ease-in-out;
+            
         }
-            .product::after {
-                content: '';
-                position: absolute;
-                top: 0;
-                left: 100%;
-                width: 100%;
-                height: 100%;
-                background-image: linear-gradient(to left, rgba(255, 255, 255, 0.9), transparent); /* Gradient */
-                backdrop-filter: none;
-                transform: translateX(0); /* Start position */
-                transition: transform 0.6s ease-in-out; /* Smooth transition */
-                z-index: 1; /* Ensure it's on top of the product content */
-        }
-            .product.swipe-left::after {
-                transform: translateX(-100%); /* Swipe to the left */
+         .product.blur-on-click {
+            filter: blur(3px); /* Apply blur */
+            opacity: 0.8; 
+       
         }
 
         .product:hover {
