--- a/index.html
+++ b/index.html
@@ -289,16 +289,10 @@
             </section>
         </main>
                          <script src="script.js"></script>
-        <footer>
-            <p>&copy;2025 Z Snacks. All rights reserved.</p>
-        </footer>
+       
+<div style="height:30px;"></div>
 
-                         <p>Scroll down to see the button.</p>
-<p>Lots of content here so you can scroll...</p>
-<p>...</p>
-<div style="height:2000px;"></div>
-
-<button onclick="topFunction()" id="myBtn" title="Go to top">Top</button>
+<button onclick="topFunction()" id="myBtn" title="Go to top"> ↑ </button>
 
 <script>
 // Get the button
@@ -321,6 +315,10 @@ function topFunction() {
   document.documentElement.scrollTop = 0; // For Chrome, Firefox, IE and Opera
 }
 </script>
+                          <footer>
+            <p>&copy;2025 Z Snacks. All rights reserved.</p>
+        </footer>
+                         
     </body>
 </html>
 
