--- a/pies.html
+++ b/pies.html
@@ -136,7 +136,7 @@
 
       #flavors img {
           display:block; 
-          margin:auto; 
+          margin:20px auto; 
           max-width:50%; 
           height:auto; 
           border-radius :10px; 
