--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
         .shops img {
             max-width: 100%;
             height: auto;
-            border-radius: 8px;
+            border-radius: 5px;
         }
 
             footer {
@@ -234,8 +234,8 @@
                         <p>Price: R70.00 per dozen</p>
                     </div>
                     <div class="product">
-                        <a href="images/pizza.jpg" id="baseLink">
-                        <img src="pizza" alt="Pizza Bases"><span></span></a>
+                        <a href="pizza.html" id="baseLink">
+                        <img src="images/pizza.jpg" alt="Pizza Bases"><span></span></a>
                         <h3>Pizza Bases</h3>
                         <p>Price: R40.00 - R45.00</p>
                     </div>
@@ -274,7 +274,7 @@
             <section id="certification">
                 <h2>Certification</h2>
                 <div class="sanha-logo">
-                    <a href="https://sanha.org.za/certified-establishmen/listing/z-snacks-sak-confectionery/"><img src="sanha.jpg"><span></span></a>
+                    <a href="https://sanha.org.za/certified-establishmen/listing/z-snacks-sak-confectionery/"><img src="images/sanha.jpg"><span></span></a>
                     <p>
                         <p>We are certified Halaal by SANHA.</p>
                 </div>
