--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
             }
 
             header {
+                background-color: #e06158;
                 color: #000000;
                 text-align: center;
                 padding: 20px;
