--- a/index.html
+++ b/index.html
@@ -251,23 +251,29 @@
                 <h2>Shops We Supply</h2>
                 <div class="shops-list">
                     <div class="shops">
-                        <img src="images/spiceworld.jpg" alt="Spiceworld">
+                        <a href="https://spice-world.co.za/"></a><img src="images/spiceworld.jpg" alt="Spiceworld">
                     <h3>Spiceworld</h3>
+                    145 Sparks Rd, Overport, Durban, 4067
                   </div>
                   <div class="shops-list">
                     <div class="shops">
-                        <img src="images/lotus.png" alt="lotus">
+                        <a href="https://lotusprayergoods.co.za/"></a><img src="images/lotus.png" alt="lotus">
                     <h3>Lotus Prayer Goods</h3>
+                    Shop No. 1
+                    6 Teal Place, Lotus Park
+                    Isipingo, Durban
                     </div>  
                      <div class="shops-list">
                     <div class="shops">
-                        <img src="images/desais.jpg" width="220" height="80" alt="Desais">
+                        <a href="https://www.desaismeats.co.za/"></a><img src="images/desais.jpg" width="220" height="80" alt="Desais">
                         <h3>Desais</h3>
+                        <h>88 Spearman Road, Sparks, Sydenham, 4091, Durban</h1>
                       </div>  
                     <div class="shops-list">
                     <div class="shops">
                         <img src="images/exambux.jpg" width="225" height="50" alt="Exam Bux">
                     <h3>Exam Bux</h3>
+                    All in Durban
                    </div>
                 </div>        
             </section>
@@ -276,21 +282,15 @@
                 <div class="sanha-logo">
                     <a href="https://sanha.org.za/certified-establishmen/listing/z-snacks-sak-confectionery/"><img src="images/sanha.jpg"><span></span></a>
                     <p>
-                        <p>We are certified Halaal by SANHA.</p>
+                        <h3>We are certified Halaal by SANHA.</h3>
                 </div>
             </section>
             <section id="contact">
                 <h2>Contact Us</h2>
                 <p>
-                    Email: <a href="mailto:Sallim7866@gmail.com">Sallim7866@gmail.com</a>
+                    <h3>Email: <a href="mailto:Sallim7866@gmail.com">Sallim7866@gmail.com</a>
                 </p>
                 <p>Phone: <a href="tel:076 345 4692">076 345 4692</a>
-                <p>Follow us on:</p>
-                <ul>
-                        <a href="https://www.instagram.com/zsnacks_" target="_blank">
-                            <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQfoixI0jtas551zRdkmD331mqLVg4W2aElCA&s" alt="Instagram" class="center">
-                        </a>
-                </ul>
             </section>
         </main>
                          <script src="script.js"></script>
