--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
                         <a href="minisub.html" id="minisubLink">
                         <img src="images/minisub.jpg" alt="Mini Sub"><span></span></a>
                         <h3>Mini Sub</h3>
-                        <p>Price: R50.00 per dozen</p>
+                        <p>Price: R50.00 for six</p>
                     </div>
                     <div class="product">
                         <a href="bun.html" id="bunLink">
@@ -251,13 +251,13 @@
                 <h2>Shops We Supply</h2>
                 <div class="shops-list">
                     <div class="shops">
-                        <a href="https://spice-world.co.za/"></a><img src="images/spiceworld.jpg" alt="Spiceworld">
+                        <a href="https://spice-world.co.za/"><img src="images/spiceworld.jpg" alt="Spiceworld"><span></span></a>
                     <h3>Spiceworld</h3>
                     145 Sparks Rd, Overport, Durban, 4067
                   </div>
                   <div class="shops-list">
                     <div class="shops">
-                        <a href="https://lotusprayergoods.co.za/"></a><img src="images/lotus.png" alt="lotus">
+                        <a href="https://lotusprayergoods.co.za/"><img src="images/lotus.png" alt="lotus"><span></span></a>
                     <h3>Lotus Prayer Goods</h3>
                     Shop No. 1
                     6 Teal Place, Lotus Park
@@ -265,7 +265,7 @@
                     </div>  
                      <div class="shops-list">
                     <div class="shops">
-                        <a href="https://www.desaismeats.co.za/"></a><img src="images/desais.jpg" width="220" height="80" alt="Desais">
+                        <a href="https://www.desaismeats.co.za/"><img src="images/desais.jpg" width="220" height="80" alt="Desais"><span></span></a>
                         <h3>Desais</h3>
                         <h>88 Spearman Road, Sparks, Sydenham, 4091, Durban</h1>
                       </div>  
@@ -290,9 +290,16 @@
                 <p>
                     <h3>Email: <a href="mailto:Sallim7866@gmail.com">Sallim7866@gmail.com</a>
                 </p>
-                <p>Phone: <a href="tel:076 345 4692">076 345 4692</a>
+                <p>Phone: <a href="tel:0763454692">076 345 4692</a>
+                </p>
+                <p>
+                    <a href="https://wa.me/2763454692" target="_blank">
+                        <img src="images/whatsapp.png" alt="WhatsApp Contact" style="width: 100px; height: auto; margin-top: 20px;">
+                    </a>
+                </p>
             </section>
-        </main>
+            </main>
+            
                          <script src="script.js"></script>
        
 <div style="height:30px;"></div>
