--- a/springroll.html
+++ b/springroll.html
@@ -146,7 +146,7 @@
 <body>
     <header>
         <div class="logo">
-            <img src="Logo.png" alt="Z Snacks Logo">
+            <img src="images/Logo.png" alt="Z Snacks Logo">
         </div>
         <nav>
             <ul>
