--- a/index.html
+++ b/index.html
@@ -293,9 +293,12 @@
                 <p>Phone: <a href="tel:0763454692">076 345 4692</a>
                 </p>
                 <p>
-                    <a href="https://wa.me/2763454692" target="_blank">
-                        <img src="images/whatsapp.png" alt="WhatsApp Contact" style="width: 100px; height: auto; margin-top: 20px;">
-                    </a>
+                    <div style="display: flex; justify-content: center; align-items: center; height: auto; margin: 0;">
+                        <a href="https://wa.me/+2763454692" target="_blank" style="text-decoration: none; display: flex; align-items: center;">
+                            <img src="https://upload.wikimedia.org/wikipedia/commons/6/6b/WhatsApp.svg" alt="WhatsApp Contact" style="width: 40px; height: auto; margin-right: 10px;">
+                            <span style="font-size: 16px; color: #000000; font-weight: bold;">Come chat to us on WhatsApp</span>
+                        </a>
+                    </div>                   
                 </p>
             </section>
             </main>
