--- a/index.html
+++ b/index.html
@@ -28,7 +28,6 @@
                 background: linear-gradient(135deg, var(--primary-color), var(--secondary-red));
                 padding: 1.5rem 0;
                 box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
-                position: sticky;
                 top: 0;
                 z-index: 1000;
             }
@@ -366,7 +365,7 @@
                         <p>Price: R70.00 per dozen</p>
                     </div>
                     <div class="product">
-                        <a href="pizza.html" id="baseLink">
+                        <a href="bases.html" id="baseLink">
                         <img src="images/pizza.jpg" alt="Pizza Bases"><span></span></a>
                         <h3>Pizza Bases</h3>
                         <p>Price: R40.00 - R45.00</p>
@@ -407,7 +406,7 @@
                     <h3>Exam Bux</h3>
                     All in Durban
                    </div>
-                </div>        
+                   
             </section>
             <section id="certification">
                 <h2>Certification</h2>
