--- a/minipizza.html
+++ b/minipizza.html
@@ -28,7 +28,6 @@
                 background: linear-gradient(135deg, var(--primary-color), var(--secondary-red));
                 padding: 1.5rem 0;
                 box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
-                position: sticky;
                 top: 0;
                 z-index: 1000;
             }
@@ -158,7 +157,17 @@
                 max-width: 100%;
                 height: auto;
                 border-radius: 20px;
-                margin: 2rem 0;
+                margin: 2rem auto; /* Centering horizontally */
+                display: block; /* Makes margin:auto work */
+                box-shadow: 0 4px 15px rgba(0, 0, 0, 0.1);
+            }
+
+            .centered-image {
+                max-width: 100%;
+                height: auto;
+                border-radius: 20px;
+                margin: 2rem auto; /* Centering horizontally */
+                display: block; /* Makes margin:auto work */
                 box-shadow: 0 4px 15px rgba(0, 0, 0, 0.1);
             }
 
@@ -234,12 +243,12 @@
 
     <main>
         <section id="mini-pizzas"><div class="header-container">
-            <a class="nav-button" href="pizzabases.html">← Back</a>
+            <a class="nav-button" href="bases.html">← Back</a>
             <h2>Mini Pizza Flavors</h2>
             <a class="nav-button" href="index.html">Next →</a>
         </div>
     
-            <img src="images/minipizza.jpg" alt="Mini Pizzas">
+            <img src="images/minipizza.jpg" alt="Mini Pizzas"  style="width: 70%; display: block; margin: 0 auto;" class="centered-image">
             <table>
                 <thead>
                     <tr>
