--- a/samoosas.html
+++ b/samoosas.html
@@ -28,7 +28,6 @@
                 background: linear-gradient(135deg, var(--primary-color), var(--secondary-red));
                 padding: 1.5rem 0;
                 box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
-                position: sticky;
                 top: 0;
                 z-index: 1000;
             }
@@ -155,10 +154,11 @@
             }
 
             img {
-                max-width: 100%;
+                max-width: 50%;
                 height: auto;
+                display: block;
+                margin: 2rem auto;
                 border-radius: 20px;
-                margin: 2rem 0;
                 box-shadow: 0 4px 15px rgba(0, 0, 0, 0.1);
             }
 
@@ -290,4 +290,4 @@
             <p>&copy; 2025 Z Snacks. All rights reserved.</p>
         </footer>
     </body>
-</html>
+</html
