--- a/savorybun.html
+++ b/savorybun.html
@@ -28,7 +28,6 @@
                 background: linear-gradient(135deg, var(--primary-color), var(--secondary-red));
                 padding: 1.5rem 0;
                 box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
-                position: sticky;
                 top: 0;
                 z-index: 1000;
             }
@@ -158,9 +157,20 @@
                 max-width: 100%;
                 height: auto;
                 border-radius: 20px;
-                margin: 2rem 0;
+                margin: 2rem auto; /* Centering horizontally */
+                display: block; /* Makes margin:auto work */
                 box-shadow: 0 4px 15px rgba(0, 0, 0, 0.1);
             }
+
+            .centered-image {
+                max-width: 100%;
+                height: auto;
+                border-radius: 20px;
+                margin: 2rem auto; /* Centering horizontally */
+                display: block; /* Makes margin:auto work */
+                box-shadow: 0 4px 15px rgba(0, 0, 0, 0.1);
+            }
+
 
             table {
                 width: 100%;
@@ -235,12 +245,12 @@
         <main>
             <section id="flavors">
                 <div class="header-container">
-                    <a class="nav-button" href="savorybun.html">← Back</a>
+                    <a class="nav-button" href="minisub.html">← Back</a>
                     <h2>Savory Bun Flavors</h2>
-                    <a class="nav-button" href="pies.html">Next →</a>
+                    <a class="nav-button" href="bases.html">Next →</a>
                 </div>
 
-                <img src="images/savorybun.jpg" alt="minisub">
+                <img src="images/savorybun.jpg" alt="minisub" class="centered-image">
                 
                 <table>
                     <thead>
