--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
 
             .shops-list {
                 display: grid;
-                grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+                grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
                 gap: 2rem;
                 padding: 1rem;
             }
@@ -176,6 +176,9 @@
                 transition: transform 0.3s ease;
                 box-shadow: 0 4px 15px rgba(0, 0, 0, 0.05);
                 border: 2px solid transparent;
+                display: flex;
+                flex-direction: column;
+                align-items: center;
             }
 
             .shops:hover {
@@ -378,6 +381,7 @@
                     </div>
                 </div>
             </section>
+
             <section id="shops">
                 <h2>Shops We Supply</h2>
                 <div class="shops-list">
@@ -406,8 +410,9 @@
                     <h3>Exam Bux</h3>
                     All in Durban
                    </div>
-                   
+                    </div> 
             </section>
+
             <section id="certification">
                 <h2>Certification</h2>
                 <div class="sanha-logo">
