--- a/index.html
+++ b/index.html
@@ -73,6 +73,7 @@
                 background-color: var(--secondary-yellow);
                 color: var(--text-color);
                 text-shadow: none;
+                text-decoration: none;
             }
 
             main {
