--- a/index.html
+++ b/index.html
@@ -411,6 +411,11 @@
                     <h3>Exam Bux</h3>
                     All in Durban
                    </div>
+                   <div class="shops-list">
+                    <div class="shops">
+                        <img src="images/FoodCity.jpg" width="225" height="50" alt="FoodCity">
+                    <h3>FoodCity</h3>
+                    123 Sparks Rd, Overport, Durban, 4091
                     </div> 
             </section>
 
