--- a/index.html
+++ b/index.html
@@ -389,15 +389,15 @@
                     <div class="shops">
                         <a href="https://spice-world.co.za/"><img src="images/spiceworld.jpg" alt="Spiceworld"><span></span></a>
                     <h3>Spiceworld</h3>
-                    145 Sparks Rd, Overport, Durban, 4067
+                    <h1>Sparks Rd, Overport, Durban, 4067</h1> 
                   </div>
                   <div class="shops-list">
                     <div class="shops">
                         <a href="https://lotusprayergoods.co.za/"><img src="images/lotus.png" alt="lotus"><span></span></a>
                     <h3>Lotus Prayer Goods</h3>
-                    Shop No. 1
+                    <h1>No. 1
                     6 Teal Place, Lotus Park
-                    Isipingo, Durban
+                    Isipingo, Durban</h1> 
                     </div>  
                      <div class="shops-list">
                     <div class="shops">
@@ -411,12 +411,6 @@
                     <h3>Exam Bux</h3>
                     All in Durban
                    </div>
-                   <div class="shops-list">
-                    <div class="shops">
-                        <img src="images/FoodCity.jpg" width="225" height="50" alt="FoodCity">
-                    <h3>FoodCity</h3>
-                    123 Sparks Rd, Overport, Durban, 4091
-                    </div> 
             </section>
 
             <section id="certification">
