--- a/index.html
+++ b/index.html
@@ -387,23 +387,23 @@
                 <h2>Shops We Supply</h2>
                 <div class="shops-list">
                     <div class="shops">
-                        <a href="https://spice-world.co.za/"><img src="images/spiceworld.jpg" alt="Spiceworld"><span></span></a>
+                        <a href="https://spice-world.co.za/"><img src="images/spiceworld.jpg" width="220" height="80"alt="Spiceworld"><span></span></a>
                     <h3>Spiceworld</h3>
-                    <h1>Sparks Rd, Overport, Durban, 4067</h1> 
+                    Sparks Rd, Overport, Durban, 4067
                   </div>
                   <div class="shops-list">
                     <div class="shops">
-                        <a href="https://lotusprayergoods.co.za/"><img src="images/lotus.png" alt="lotus"><span></span></a>
+                        <a href="https://lotusprayergoods.co.za/"><img src="images/lotus.png"width="220" height="80" alt="lotus"><span></span></a>
                     <h3>Lotus Prayer Goods</h3>
-                    <h1>No. 1
+                    No. 1
                     6 Teal Place, Lotus Park
-                    Isipingo, Durban</h1> 
+                    Isipingo, Durban
                     </div>  
                      <div class="shops-list">
                     <div class="shops">
                         <a href="https://www.desaismeats.co.za/"><img src="images/desais.jpg" width="220" height="80" alt="Desais"><span></span></a>
                         <h3>Desais</h3>
-                        <h>88 Spearman Road, Sparks, Sydenham, 4091, Durban</h1>
+                        88 Spearman Road, Sparks, Sydenham, 4091, Durban
                       </div>  
                     <div class="shops-list">
                     <div class="shops">
