--- a/minisub.html
+++ b/minisub.html
@@ -249,7 +249,7 @@
                     <a class="nav-button" href="savorybun.html">Next →</a>
                 </div>
 
-                <img src="images/minisub.jpg" alt="minisub"  class="centered-image">
+                <img src="images/sub.jpg" alt="minisub"  class="centered-image">
                 
                 <table>
                     <thead>
