--- a/index.html
+++ b/index.html
@@ -28,8 +28,10 @@
                 background: linear-gradient(135deg, var(--primary-color), var(--secondary-red));
                 padding: 1.5rem 0;
                 box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
+                position: static;
                 top: 0;
                 z-index: 1000;
+                width: 100%;
             }
 
             .logo img {
@@ -37,6 +39,7 @@
                 transition: transform 0.3s ease;
                 display: block;
                 margin: 0 auto;
+                border-radius: 15px;
             }
 
             .logo img:hover {
@@ -318,7 +321,7 @@
     <body>
         <header>
             <div class="logo">
-                <img src="images/Logo.png" alt="Z Snacks Logo">
+                <img src="https://mohamedsuhailkhan.github.io/Zsnacks/images/Logo.png" alt="Z Snacks Logo">
             </div>
             <nav>
                 <ul>
