Added Sanha Cert

--- a/index.html
+++ b/index.html
@@ -292,6 +292,24 @@
                 transform: translateY(-3px);
             }
 
+            .pdf-button{
+                background-color: gold;
+                color: black;
+                padding: 10px 20px;
+                text-decoration: none;
+                border: none;
+                border-radius: 30px;
+                cursor: pointer;
+                font-size: 16px;
+                font-weight: bold;
+                transition: background-color 0.3 ease;
+            }
+
+            .pdf-button:hover{
+                background-color: #d4af37;
+                transform: translate(-3px);
+            }
+
             footer {
                 background: linear-gradient(135deg, var(--secondary-red), var(--primary-color));
                 color: white;
@@ -426,6 +444,9 @@
                 <div class="sanha-logo">
                     <a href="https://sanha.org.za/certified-establishmen/listing/z-snacks-sak-confectionery/"><img src="images/sanha.jpg"><span></span></a>
                     <p>
+                    <a href="images/2024-11-19 SAK Confectioners (Pty) Ltd ta Z Snacks Letter of Confirmation-1.pdf" class="pdf-button" target="_blank">
+                        View Certification
+                    </a>   
                         <h3>We are certified Halaal by SANHA.</h3>
                 </div>
             </section>
