--- a/index.html
+++ b/index.html
@@ -444,7 +444,7 @@
                 <div class="sanha-logo">
                     <a href="https://sanha.org.za/certified-establishmen/listing/z-snacks-sak-confectionery/"><img src="images/sanha.jpg"><span></span></a>
                     <p>
-                    <a href="images/2024-11-19 SAK Confectioners (Pty) Ltd ta Z Snacks Letter of Confirmation-1.pdf" class="pdf-button" target="_blank">
+                    <a href="images/2024-11-19 SAK Confectioners (Pty) Ltd ta Z Snacks Letter of Confirmation-1.pdf" class="pdf-button" target="_blank" rel="noopener noreferrer">
                         View Certification
                     </a>   
                         <h3>We are certified Halaal by SANHA.</h3>
