--- a/samoosas.html
+++ b/samoosas.html
@@ -99,7 +99,7 @@
                 bottom: 0;
                 left: 50%;
                 transform: translateX(-50%);
-                width: 80px;
+                width: 100px;
                 height: 4px;
                 background: linear-gradient(90deg, var(--secondary-red), var(--secondary-yellow));
                 border-radius: 2px;
@@ -191,6 +191,7 @@
 
                 nav ul {
                     flex-direction: column;
+                    align-items: center;
                     gap: 1rem;
                 }
 
