--- a/samoosas.html
+++ b/samoosas.html
@@ -26,17 +26,18 @@
 
             header {
                 background: linear-gradient(135deg, var(--primary-color), var(--secondary-red));
-                padding: 1.5rem 0;
+                padding: 1rem 0;
                 box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
                 top: 0;
                 z-index: 1000;
             }
 
             .logo img {
-                max-width: 250px;
+                max-width: 200px;
                 transition: transform 0.3s ease;
                 display: block;
                 margin: 0 auto;
+                gap: 0.5rem auto;
             }
 
             .logo img:hover {
@@ -45,11 +46,11 @@
 
             nav ul {
                 list-style: none;
-                padding: 0;
+                padding: 0.4rem;
                 display: flex;
                 justify-content: center;
                 gap: 2rem;
-                margin: 0;
+                margin: 0.5 auto;
             }
 
             nav ul li a {
@@ -58,7 +59,7 @@
                 font-size: 1rem;
                 font-weight: 600;
                 transition: all 0.3s ease;
-                padding: 0.5rem 1rem;
+                padding: 0.7rem 3rem;
                 border-radius: 25px;
             }
 
@@ -212,7 +213,7 @@
     <body>
         <header>
             <div class="logo">
-                <img src="images/Logo.png" alt="Z Snacks Logo">
+                <img src="https://mohamedsuhailkhan.github.io/Zsnacks/images/Logo.png" alt="Z Snacks Logo">
             </div>
             <nav>
                 <ul>
