--- a/minisub.html
+++ b/minisub.html
@@ -157,8 +157,8 @@
                 max-width: 100%;
                 height: auto;
                 border-radius: 20px;
-                margin: 2rem auto; /* Centering horizontally */
-                display: block; /* Makes margin:auto work */
+                margin: 2rem auto;
+                display: block;
                 box-shadow: 0 4px 15px rgba(0, 0, 0, 0.1);
             }
 
@@ -188,15 +188,6 @@
                 background-color: #f8f8f8;
             }
 
-            .centered-image {
-                max-width: 100%;
-                height: auto;
-                border-radius: 20px;
-                margin: 2rem auto; /* Centering horizontally */
-                display: block; /* Makes margin:auto work */
-                box-shadow: 0 4px 15px rgba(0, 0, 0, 0.1);
-            }
-
             footer {
                 background: linear-gradient(135deg, var(--secondary-red), var(--primary-color));
                 color: white;
@@ -219,10 +210,21 @@
 
                 table {
                     font-size: 0.9rem;
+                    overflow-x: auto;
                 }
 
                 .header-container {
                     padding: 0 2rem;
+                }
+
+                .nav-button {
+                    font-size: 1rem;
+                    padding: 0.6rem 1.2rem;
+                }
+
+                img {
+                    width: 90%;
+                    margin: 1rem auto;
                 }
             }
         </style>
