--- a/samoosas.html
+++ b/samoosas.html
@@ -26,52 +26,60 @@
 
             header {
                 background: linear-gradient(135deg, var(--primary-color), var(--secondary-red));
-                padding: 1rem 0;
+                padding: 1.5rem 0;
                 box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
                 top: 0;
                 z-index: 1000;
             }
 
             .logo img {
-                max-width: 250px;
+                max-width: 300px;
                 transition: transform 0.3s ease;
                 display: block;
                 margin: 0 auto;
-                gap: 0.5rem auto;
             }
 
             .logo img:hover {
                 transform: scale(1.02);
             }
 
+            nav {
+                background-color: rgba(255, 255, 255, 0.1);
+                padding: 1rem 0;
+                margin-top: 1rem;
+                backdrop-filter: blur(5px);
+            }
+
             nav ul {
                 list-style: none;
-                padding: 0.4rem;
+                padding: 0;
                 display: flex;
                 justify-content: center;
-                gap: 2rem;
-                margin: 0.5 auto;
+                gap: 3rem;
+                margin: 0;
             }
 
             nav ul li a {
                 color: #ffffff;
                 text-decoration: none;
-                font-size: 1rem;
+                font-size: 1.1rem;
                 font-weight: 600;
                 transition: all 0.3s ease;
-                padding: 0.7rem 3rem;
+                padding: 0.5rem 1rem;
                 border-radius: 25px;
             }
 
             nav ul li a:hover {
                 background-color: var(--secondary-yellow);
                 color: var(--text-color);
+                text-shadow: none;
+                text-decoration: none;
             }
 
             main {
                 max-width: 1400px;
                 margin: 2rem auto;
-                padding: 0 1rem;
+                padding: 0 2rem;
             }
 
             section {
@@ -85,7 +93,7 @@
 
             h2 {
                 color: var(--secondary-red);
-                font-size: 2rem;
+                font-size: 2.5rem;
                 text-align: center;
                 margin-bottom: 2rem;
                 font-family: 'Poppins', sans-serif;
@@ -111,15 +119,14 @@
                 justify-content: space-between;
                 align-items: center;
                 margin: 0 -2rem 2rem -2rem;
-                padding: 0 2rem;
-                flex-wrap: wrap;
+                padding: 0 4rem;
             }
 
             .nav-button {
                 color: white;
                 text-decoration: none;
-                font-size: 1rem;
-                padding: 0.6rem 1.2rem;
+                font-size: 1.1rem;
+                padding: 0.8rem 1.5rem;
                 border-radius: 50px;
                 background: linear-gradient(135deg, var(--secondary-red), var(--primary-color));
                 transition: all 0.3s ease;
@@ -138,12 +145,20 @@
                 box-shadow: 0 4px 15px rgba(0, 0, 0, 0.1);
             }
 
+            a {
+                text-decoration: none;
+            }
+
+            a:hover {
+                text-decoration: none;
+            }
+
             img {
                 max-width: 100%;
                 height: auto;
-                display: block;
-                margin: 2rem auto;
                 border-radius: 20px;
+                margin: 2rem auto;
+                display: block;
                 box-shadow: 0 4px 15px rgba(0, 0, 0, 0.1);
             }
 
@@ -177,17 +192,14 @@
                 background: linear-gradient(135deg, var(--secondary-red), var(--primary-color));
                 color: white;
                 text-align: center;
-                padding: 1.5rem 0;
+                padding: 2rem 0;
                 margin-top: 4rem;
                 border-top: 4px solid var(--secondary-yellow);
             }
 
             @media (max-width: 768px) {
-                .header-container {
-                    flex-direction: column;
-                    align-items: center;
-                    text-align: center;
-                    gap: 1rem;
+                .logo img {
+                    max-width: 250px;
                 }
 
                 nav ul {
@@ -196,16 +208,23 @@
                     gap: 1rem;
                 }
 
-                nav ul li a {
+                table {
                     font-size: 0.9rem;
+                    overflow-x: auto;
                 }
 
-                h2 {
-                    font-size: 1.8rem;
+                .header-container {
+                    padding: 0 2rem;
                 }
 
-                th, td {
-                    padding: 0.8rem;
+                .nav-button {
+                    font-size: 1rem;
+                    padding: 0.6rem 1.2rem;
+                }
+
+                img {
+                    width: 90%;
+                    margin: 1rem auto;
                 }
             }
         </style>
