--- a/savorybun.html
+++ b/savorybun.html
@@ -157,20 +157,10 @@
                 max-width: 100%;
                 height: auto;
                 border-radius: 20px;
-                margin: 2rem auto; /* Centering horizontally */
-                display: block; /* Makes margin:auto work */
+                margin: 2rem auto;
+                display: block;
                 box-shadow: 0 4px 15px rgba(0, 0, 0, 0.1);
             }
-
-            .centered-image {
-                max-width: 100%;
-                height: auto;
-                border-radius: 20px;
-                margin: 2rem auto; /* Centering horizontally */
-                display: block; /* Makes margin:auto work */
-                box-shadow: 0 4px 15px rgba(0, 0, 0, 0.1);
-            }
-
 
             table {
                 width: 100%;
@@ -220,10 +210,21 @@
 
                 table {
                     font-size: 0.9rem;
+                    overflow-x: auto;
                 }
 
                 .header-container {
                     padding: 0 2rem;
+                }
+
+                .nav-button {
+                    font-size: 1rem;
+                    padding: 0.6rem 1.2rem;
+                }
+
+                img {
+                    width: 90%;
+                    margin: 1rem auto;
                 }
             }
         </style>
@@ -250,7 +251,7 @@
                     <a class="nav-button" href="bases.html">Next →</a>
                 </div>
 
-                <img src="images/savorybun.jpg" alt="minisub" class="centered-image">
+                <img src="images/savorybun.jpg" alt="savorybun" class="centered-image">
                 
                 <table>
                     <thead>
