Updated section tag

--- a/minisub.html
+++ b/minisub.html
@@ -89,6 +89,10 @@
                 border-radius: 20px;
                 box-shadow: 0 4px 20px rgba(0, 0, 0, 0.05);
                 border-left: 4px solid var(--secondary-red);
+                width: 100%;
+                box-sizing: border-box;
+                max-width: 1400px;
+                margin: 0 auto;
             }
 
             h2 {
@@ -247,7 +251,7 @@
             <section id="flavors">
                 <div class="header-container">
                     <a class="nav-button" href="pies.html">← Back</a>
-                    <h2>Delicious MiniSub Flavors</h2>
+                    <h2>MiniSub Flavors</h2>
                     <a class="nav-button" href="savorybun.html">Next →</a>
                 </div>
 
