--- a/minipizza.html
+++ b/minipizza.html
@@ -202,6 +202,10 @@
                     max-width: 250px;
                 }
 
+                img.centered-image {
+                    width: 80%;
+                }
+
                 nav ul {
                     flex-direction: column;
                     align-items: center;
