--- a/springroll.html
+++ b/springroll.html
@@ -89,6 +89,10 @@
                 border-radius: 20px;
                 box-shadow: 0 4px 20px rgba(0, 0, 0, 0.05);
                 border-left: 4px solid var(--secondary-red);
+                width: 100%;
+                box-sizing: border-box;
+                max-width: 1400px;
+                margin: 0 auto;
             }
 
             h2 {
