--- a/samoosas.html
+++ b/samoosas.html
@@ -122,17 +122,21 @@
                 display: flex;
                 justify-content: space-between;
                 align-items: center;
-                margin: 0 auto 2rem auto;
-                padding: 0 1rem;
-                max-width: calc(100% - 2rem);
+                width: 100%;
+                margin: 0 0 2rem 0;
+                padding: 0;
                 box-sizing: border-box;
+            }
+
+            .header-container h2{
+                margin: 0;
+                text-align: center;
             }
 
             .nav-button {
                 color: white;
                 text-decoration: none;
                 font-size: 1.1rem;
-                padding: 0.8rem 1.5rem;
                 border-radius: 50px;
                 background: linear-gradient(135deg, var(--secondary-red), var(--primary-color));
                 transition: all 0.3s ease;
@@ -140,6 +144,7 @@
                 align-items: center;
                 gap: 0.5rem;
                 border: 2px solid transparent;
+                text-align: center;
             }
 
             .nav-button:hover {
@@ -220,14 +225,21 @@
                 }
 
                 .header-container {
-                    padding: 0 0.5;
-                    margin: 0 auto 1.5rem auto;
-                    gap: 0.5rem;
+                    flex-direction: column;
+                    gap: 1rem;
+                    margin: 0 0 1.5rem 0;
                 }
                 
                 .header-container h2{
                     font-size: 1.8rem;
-                    margin: 0;
+                    margin: -1;
+                }
+
+                .nav-button-container{
+                    display: flex;
+                    justify-content: space-between;
+                    width: 100%;
+                    padding: 0 1rem;
                 }
 
                 .nav-button {
